Run actions on pull requests
Signed-off-by: Jakub Janowski <jakub.janowski@nordsec.com>

--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -1,13 +1,17 @@
 name: Build and Push Docker Image on Release
 
 on:
-  push:
-    tags:
-    - '*'
+  release:
+    types: [published]
+  pull_request:
+    branches:
+      - main
+
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  PUSH_IMAGE: ${{ github.event_name == 'release' }}
 
 jobs:
   build-docker-and-push:
@@ -34,6 +38,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        push: true
+        push: ${{ env.PUSH_IMAGE }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
