Use NordSecurity/uniffi-rs instead of mozilla/uniffi-rs
NordSecurity/uniffi-rs fork contains docstring support.

Signed-off-by: Kristupas Antanavicius <kristupas.antanavicius@nordsec.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.23.0"
 edition = "2021"
 
 [dependencies]
-uniffi = { version = "0.23.0", features = ["cli"] }
+uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", rev = "36de103c82d3e062ac045b13394b8ad387d23a67", features = ["cli"] }
