--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
-[package]
-name = "uniffi-bindgen"
-version = "0.23.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", rev = "a4318f3b55a7ee2c12eb9f0fe1b5122d89323fc4", features = ["cli"] }
+members = [
+    "uniffi-bindgen",
+    "compatibility-test"
+]
