--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -20,9 +20,9 @@ jobs:
       packages: write
       contents: read
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
 
-    - uses: docker/login-action@v2
+    - uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
@@ -30,12 +30,12 @@ jobs:
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
-      uses: docker/metadata-action@v4
+      uses: docker/metadata-action@818d4b7b91585d195f67373fd9cb0332e31a7175
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825
       with:
         context: .
         push: ${{ env.PUSH_IMAGE }}
