--- a/uniffi-bindgen/Cargo.toml
+++ b/uniffi-bindgen/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.23.0"
 edition = "2021"
 
 [dependencies]
-uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", rev = "a4318f3b55a7ee2c12eb9f0fe1b5122d89323fc4", features = ["cli"] }
+uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", tag = "v0.23.0-3", features = ["cli"] }
