--- a/compatibility-test/Cargo.toml
+++ b/compatibility-test/Cargo.toml
@@ -8,10 +8,10 @@ publish = false
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
-name = "uniffi_coverall"
+name = "compatibility_test"
 
 [dependencies]
-uniffi = { version = "0.25.0" }
+uniffi-fixture-coverall = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.25.0" }
 once_cell = "1.12"
 thiserror = "1.0"
 
