--- a/uniffi-bindgen/Cargo.toml
+++ b/uniffi-bindgen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "uniffi-bindgen"
-version = "0.25.0"
+version = "0.28.3"
 edition = "2021"
 
 [dependencies]
-uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", tag = "v0.3.3+v0.25.0", features = ["cli"] }
+uniffi = { version = "0.28.3", features = ["cli"] }
